fix issue with nav going under image on mobile

--- a/components/navigation/Navigation.module.css
+++ b/components/navigation/Navigation.module.css
@@ -91,6 +91,7 @@
     top: 60px;
     left: -20px;
     list-style-type: none;
+    z-index: 200000;
 }
 
 .dropdown__list-item {
